--- a/allifmaalcommonapp/templates/allifmaalcommonapp/banks/bank-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/banks/bank-details.html
@@ -1,295 +1,90 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
-
-<!--start....main headere-->
-<div class="card-header">
-
-<div class="row mt-12" ><!--start....header row-->
-
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Actions
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditBank' allifquery.id user_var glblslug %}">Edit Bank</a></li>
-        
-        <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteBank' allifquery.id user_var glblslug %}">Delete Bank</a></li>
-    
-   </div>
-  </ul>
-</div>
-<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-<a href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a>
-<a href="{% url 'allifmaalcommonapp:commonAddBank' user_var glblslug %}">New Bank</a>
-
-
-</div>
-
-    </div><!--end....header column-->
+  {% extends 'allifmaalcommonapp/ui/details/item-details.html'%}
+  {% load humanize %}
+  {% load allif_navigation_tags %}
+  {% block add-form-header-block %}
+  {% include 'allifmaalcommonapp/banks/banks-header.html' %}
   
-  </div><!--end....header row-->
+  {%endblock%}
 
-</div><!--end....main headere-->
+  {% block details-table-col-one %}
+    <tr>
+      <td class="allif-fix-table-col">Name</td>
+      <td>{{allifquery.name}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col">Account</td>
+      <td>{{allifquery.account}}</td>
+    </tr>
+  {%endblock%}
 
-  <div class="allifmaincontainer">
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">{{allifquery}} Details</div>
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-        <tr>
-          <td class="allif-fix-table-col">Company</td>
-          <td>{{allifquery.company}}</td>
-          </tr>
-      <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{allifquery.division}}</td>
-        </tr>
-      <tr>
-        <td class="allif-fix-table-col">Branch</td>
-        <td>{{allifquery.branch}}</td>
-        </tr>
-      <tr>
-        <td class="allif-fix-table-col">Department</td>
-        <td>{{allifquery.department}}</td>
-        </tr>
-      
-   
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Name</td>
-            <td>{{allifquery.name}}</td>
-            </tr>
-          <tr>
-            <td class="allif-fix-table-col">Created By</td>
-            <td>{{allifquery.owner}}</td>
-            </tr>
-         
-        <tr>
-            <td class="allif-fix-table-col">Account</td>
-            <td>{{allifquery.account}}</td>
-            </tr>
-         
-          <tr>
-            <td class="allif-fix-table-col">Balance</td>
-            <td>{{allifquery.balance|floatformat:2|intcomma}}</td>
-            </tr>
-      
-      
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Date</td>
-            <td>{{allifquery.date|date:'d/m/Y'}}</td>
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Deposits</td>
-              <td>{{allifquery.deposit|floatformat:2|intcomma}}</td>
-          
-              </tr>
-                  
-            
-            <tr>
-            <td class="allif-fix-table-col">Withdrawals</td>
-            <td>{{allifquery.withdrawal|floatformat:2|intcomma}}</td>
-          
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Comments</td>
-              <td>{{allifquery.comments}}</td>
-          
-          </tr> 
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<div class="row mt-12"> <!--start....table row-->
-  <div class="row">
-  <div class="col-md-6"> <!--start....table column-->
-    <div class="table-content-description"> <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}" class="allif-table-links"> {{allifquery}} Deposits</a> </div>
-  <div class="allif-scroll-table">
-    <div class="table-responsive allif-full-table">
-    <table class="table table-layout">
-      <thead>
-        <tr class="allif-table-header-row">
-        <td class="allif-fix-table-col">Amount</td>
-        <td>Description</td>
-        <td>Date</td>
-       
-        <td>Navigate</td>
-        <td> . . . </td>
-        <td></td>
-        </tr>
-        </thead>
-        <tbody class="allif-table-body">
-         
-        
-        {% for item in deposits %} 
-        <tr data-id="{{item.id}}">
-          <td class="allif-fix-table-col">
-            <a href="{% url 'allifmaalcommonapp:commonBankShareholderDepositDetails' item.id user_var glblslug %}" class="allif-table-links">
-            {{item.amount|floatformat:2|intcomma}}
-            </a>
-           </td>
-          <td>
-            {{item.description}}
-           </td>
-        
-        
-         <td>
-          {{item.date|date:'d/m/Y'}}
-         </td>
-        <td>
-          <div class="dropdown allifmaal-content-dropdown">
-            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">{{open_link}}</a>
-            <div class="dropdown-content">
-              <a href="{% url 'allifmaalcommonapp:commonEditBankShareholderDeposit' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-              
-            </div>
-          </div>
-          <div class="dropdown allif-confirm-action">
-            
-            <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-            <a href="{% url 'allifmaalcommonapp:commonDeleteBankShareholderDeposit' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-          </div>
-
-
-        </td>
-
-      
-       
-       <td> . . . </td>
-       <td></td>
-      </tr>
-      {% endfor %}
-      </tbody>
-    </table>
-    </div>
-   </div>
-
-</div><!--end....table column-->
-<div class="col-md-6"> <!--start....table column-->
-  <div class="table-content-description"> <a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}" class="allif-table-links"> {{allifquery}} Withdrawals </a> </div>
-  <div class="allif-scroll-table">
-    <div class="table-responsive allif-full-table">
-    <table class="table table-layout">
-      <thead>
-        <tr class="allif-table-header-row">
-        <td class="allif-fix-table-col">Amount</td>
-        <td>Description</td>
-        <td>Date</td>
-       
-        <td>Navigate</td>
-        <td> . . . </td>
-        <td></td>
-        </tr>
-        </thead>
-        <tbody class="allif-table-body">
-         
-           
-        {% for item in allifqueryset %} 
-        <tr data-id="{{item.id}}">
-          <td class="allif-fix-table-col">
-            <a href="{% url 'allifmaalcommonapp:commonBankWithdrawalDetails' item.id user_var glblslug %}" class="allif-table-links">
-            {{item.amount|floatformat:2|intcomma}}
-            </a>
-           </td>
-          <td>
-            {{item.description}}
-           </td>
-        
-        
-         <td>
-          {{item.date|date:'d/m/Y'}}
-         </td>
-        <td>
-          <div class="dropdown allifmaal-content-dropdown">
-            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">{{open_link}}</a>
-            <div class="dropdown-content">
-              <a href="{% url 'allifmaalcommonapp:commonEditBankWithdrawal' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-              
-            </div>
-          </div>
-          <div class="dropdown allif-confirm-action">
-            
-            <a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-            <a href="{% url 'allifmaalcommonapp:commonDeleteBankWithdrawal' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-          </div>
-
-
-        </td>
-
-      
-       
-       <td> . . . </td>
-       <td></td>
-      </tr>
-      {% endfor %}
-      </tbody>
-    </table>
-    </div>
-   </div>
-
-</div><!--end....table column-->
-
-</div><!--end....table row-->
-</div>
-</div>
-  {% block scripts %}
-
+  {% block details-table-col-two %}
+  <tr>
+    <td class="allif-fix-table-col">Description</td>
+    <td>{{allifquery.description}}</td>
+  </tr>
+  <tr>
+    <td class="allif-fix-table-col">Balance</td>
+    <td>{{allifquery.balance}}</td>
+  </tr>
   {% endblock %}
-   {% endblock %}
-   
+  
+  {% block core-details-tab-col-one %}
+  <tr>
+    <td class="allif-fix-table-col">Deposits</td>
+    <td>{{allifquery.deposit}}</td>
+  </tr>
+  {%endblock%}
 
+  {% block core-details-tab-col-two %}
+  <tr>
+    <td class="allif-fix-table-col">Withdrawals</td>
+    <td>{{allifquery.withdrawal}}</td>
+  </tr>
+  {% endblock %}
+
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col">{{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Banks' user_var glblslug %}">Go Back</a></td>
+    </tr>
+  {%endblock%}
+
+  {% block general-details-tab-col-two %}
+  <tr>
+    <td class="allif-fix-table-col">Description</td>
+    <td>{{allifquery.description}}</td>
+  </tr>
+  {% endblock %}
+  
+  {% block allif_sensitive_section_col_two %}
+  <tr>
+    <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+    <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.wanttodeletebank.url }}">Delete {{allifquery}}</a></td>
+  </tr>
+  {%endblock%}
+
+  {% block item_details_related_items_full_table %} {%endblock%}
+
+  {% block half_table_one_headers %}
+  <td class="allif-fix-table-col">Amount</td>
+  <td>Description</td>
+  <td>Date</td>
+  {%endblock%}
+
+  {% block half_table_one_content %}
+    <td class="allif-fix-table-col"><a href="{% url 'allifmaalcommonapp:commonBankShareholderDepositDetails' item.id user_var glblslug %}" class="allif-table-links"> {{item.amount|floatformat:2|intcomma}}</a></td>
+    <td>{{item.description}}</td>
+    <td>{{item.date|date:'d/m/Y'}}</td>
+  {%endblock%}
+
+  {% block half_table_two_headers %}
+  <td class="allif-fix-table-col">Amount</td>
+  <td>Description</td>
+  <td>Date</td>
+  {%endblock%}
+
+  {% block half_table_two_content %}
+  <td class="allif-fix-table-col"><a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}" class="allif-table-links">{{item.amount|floatformat:2|intcomma}}</a></td>
+  <td>{{item.description}}</td>
+  <td>{{item.date|date:'d/m/Y'}}</td>
+  {%endblock%}
