--- a/allifmaalcommonapp/templates/allifmaalcommonapp/banks/banks.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/banks/banks.html
@@ -1,169 +1,35 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
+{% extends 'allifmaalcommonapp/ui/tables/full/data-list.html'%}
+{% load allif_navigation_tags %}
 {% load humanize %}
-{% block title %}
-{{title}}
+{% block allif-basic-search-action %}
+{% url 'allifmaalcommonapp:commonBankSearch' user_var glblslug %}
 {% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
+{% block advanced-search %}{%endblock%}
+{% block upload-excel-file %}{%endblock%}
+{% block allif-header-links %}
+ {% include 'allifmaalcommonapp/banks/banks-header.html' %}
+{% endblock %}
+{% block list-table-headers %}
+<td class="allif-fix-table-col"> Bank </td>
+<td class="allif-table-header-td"> Account</td>
+<td class="allif-table-header-td"> Deposit </td>
+<td class="allif-table-header-td"> Withdrawal</td>
+<td class="allif-table-header-td">Balance </td>
+{% endblock %}
+{% block list-table-content-seciton %}
+<td class="allif-fix-table-col">
+   <a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonBankDetails' item.id user_var glblslug %}"> {{item.name}} </a>
+</td>
+<td class="allif-table-content-td"> {{item.account}} </td>
+<td class="allif-table-content-td"> {{item.deposit|floatformat:2|intcomma}}</td>
+<td class="allif-table-content-td"> {{item.withdrawal|floatformat:2|intcomma}}</td>
+<td class="allif-table-content-td">{{item.balance|floatformat:2|intcomma}}</td>
+{% endblock %}
+
+{% block list-table-content-seciton-dropdown-links %}
+<a href="{% url 'allifmaalcommonapp:commonEditBank' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Bank</a>
+<a href="{% url 'allifmaalcommonapp:commonBankDetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Bank Details</a>
+
+{% endblock %}
  
-  <!--start....main headere-->
-<div class="card-header">
-  <div class="row mt-12" ><!--start....header row-->
-  <div class="col-md-12"><!--start....header column-->
-  <div class="container-fluid amel-content-header">
-    <div class="dropdown allifmaal-content-dropdown">
-      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Filters
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <div class="content-dropdown-menu">
-        <li><a class="dropdown-item">Looking for something?</a></li>
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonBankSearch' user_var glblslug %}">{% csrf_token %}
-          <input type="text" id="allifsearchcommonfield" name="allifsearchcommonfieldname" class="form-control allifsearchcommonfieldclasstwo"
-          placeholder="Type Here ...">
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-          </form>
-         
-      </div>
-      </ul>
-    </div>
-
-    <a class="amel-table-list-identifier">Banks:</a>
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    
-    <a href="{% url 'allifmaalcommonapp:commonAddBank' user_var glblslug %}" >New Bank </a>
-    <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
-    <a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a>
-    
-  <a href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a>
-
-  </div>
-    </div><!--end....header column-->
-    </div><!--end....header row-->
-  </div><!--end....main headere-->
-  
-    <div class="allifmaincontainer">
-<div class="row mt-12"> <!--start....table row-->
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="table-responsive allif-full-table">
-    <table class="table table-layout">
-      <thead>
-        <tr class="allif-table-header-row">
-        <td class="allif-fix-table-col">Bank Name</td>
-       
-        <td>Account</td>
-        <td>Deposit</td>
-        <td>Withdrawal</td>
-        <td>Balance</td>
-     
-        <td>Navigate</td>
-        
-        <td> . . . </td>
-        <td></td>
-        </tr>
-        </thead>
-        <tbody class="allif-table-body">
-         
-        
-        {% for item in allifqueryset %} 
-        <tr data-id="{{item.id}}">
-        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonBankDetails' item.id user_var glblslug %}">{{item.name}}</a></td>
-       
-        
-          <td>
-          {{item.account}}
-         </td>
-         <td>
-          {{item.deposit|floatformat:2|intcomma}}
-         </td>
-         <td>
-          {{item.withdrawal|intcomma}}
-         </td>
-         <td>
-          <a href="{% url 'allifmaalcommonapp:commonBankDetails' item.id user_var glblslug %}" class="allif-table-links">
-          {{item.balance|intcomma}}
-          </a>
-         </td>
-
-        <td>
-          <div class="dropdown allifmaal-content-dropdown">
-            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-            <div class="dropdown-content">
-              <a href="{% url 'allifmaalcommonapp:commonBankDetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">See Details</a>
-             
-            </div>
-          </div>
-         
-         
-        </td>
-       <td> . . . </td>
-       <td></td>
-      
-  
-    </tr>
-    {% endfor %}
-    {% if searched_data %}
-    {% for item in searched_data %}
-    <tr data-id="{{item.id}}">
-      <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonBankDetails' item.id user_var glblslug %}">{{item.name}}</a></td>
-     
-      
-        <td>
-        {{item.account}}
-       </td>
-       <td>
-        {{item.deposit|floatformat:2|intcomma}}
-       </td>
-       <td>
-        {{item.withdrawal|intcomma}}
-       </td>
-       <td>
-        <a href="{% url 'allifmaalcommonapp:commonBankDetails' item.id user_var glblslug %}" class="allif-table-links">
-        {{item.balance|intcomma}}
-        </a>
-       </td>
-      
-      <td>
-        <div class="dropdown allifmaal-content-dropdown">
-          <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-          <div class="dropdown-content">
-            <a href="{% url 'allifmaalcommonapp:commonBankDetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">See Details</a>
-           
-          </div>
-        </div>
-       
-       
-      </td>
-     <td> . . . </td>
-     <td></td>
-    
-
-  </tr>
-    {% endfor %}
-      {%endif %}
-
-      </tbody>
-    </table>
-    </div>
-   </div>
-
-</div><!--end....table column-->
-
-</div><!--end....table row-->
-
-</div>
-
-</div>
-  {% block scripts %}
- 
-  {% endblock %}
-  {% endblock %}
-
-
-
-
-
 
