--- a/allifmaalcommonapp/templates/allifmaalcommonapp/banks/deposits/shareholders/add-deposit-sh.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/banks/deposits/shareholders/add-deposit-sh.html
@@ -1,262 +1,53 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
- 
-<!--start....main headere-->
-<div class="card-header">
-
-<div class="row mt-12" ><!--start....header row-->
-
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-
-  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-  <a href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a>
-    <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
-    <a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddBankShareholderDeposit' user_var glblslug %}">New Deposit</a>
- 
-
-</div>
-
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-
-<div class="allifmaincontainer">
-{% if allifquery_update%}
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Edit New Deposit</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-
-      <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{form.division}}</td>
-    
-        </tr>
-        
-        <tr>
-          <td class="allif-fix-table-col">Branch</td>
-          <td>{{form.branch}}</td>
-      
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td>{{form.department}}</td>
-        
-            </tr>
-           
-            <tr>
-              <td class="allif-fix-table-col">Banks</td>
-              <td>{{form.bank}}</td>
-          
-              </tr>
-           
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Equity</td>
-            <td>{{form.equity}}</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Asset</td>
-              <td>{{form.asset}}</td>
-          
-              </tr>
-
-           
-                  <td class="allif-fix-table-col">Description</td>
-                  <td>{{form.description}}</td>
-              
-                  </tr>
-
-                
-                   
-                    
-               
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Amount</td>
-            <td>{{form.amount}}</td>
-        
-            </tr>
-          <tr>
-            <td class="allif-fix-table-col">Comments</td>
-            <td>{{form.comments}}</td>
-        
-            </tr>
-           
-            
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-{% else %}
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add New Deposit</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-      <tr>
-        <td class="allif-fix-table-col">Banks</td>
-        <td>{{form.bank}}</td>
-    
-        </tr>
-        <tr>
-          <td class="allif-fix-table-col">Equity</td>
-          <td>{{form.equity}}</td>
-      
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Asset</td>
-            <td>{{form.asset}}</td>
-        
-            </tr>
-
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-         
-           
-                  <td class="allif-fix-table-col">Description</td>
-                  <td>{{form.description}}</td>
-              
-                  </tr>
-            <tr>
-              <td class="allif-fix-table-col">Amount</td>
-              <td>{{form.amount}}</td>
-          
-              </tr>
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-         
-          <tr>
-            <td class="allif-fix-table-col">Comments</td>
-            <td>{{form.comments}}</td>
-        
-            </tr>
-           
-            
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-{% endif %}
-
-
-</div>
-
-</div>
-  {% block scripts %}
-
+{% extends 'allifmaalcommonapp/ui/forms/add-form.html'%}
+{% load allif_navigation_tags %}
+ {% block add-form-header-block %}
+  {% include 'allifmaalcommonapp/banks/banks-header.html' %}
   {% endblock %}
-   {% endblock %}
-   
+   {% block core-tab-col-one %}
+    <tr>
+      <td class="allif-fix-table-col-forms">Deposit Name</td>
+      <td>{{form.name}}</td>
+    </tr>
+    <tr>
+      <td class="allif-fix-table-col-forms">Description</td>
+      <td>{{form.description}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Amount</td>
+      <td>{{form.amount}}</td>
+    </tr>
+     
+        
+    {%endblock%}
 
-
-
+      {% block core-tab-col-two %}
+     <tr>
+      <td class="allif-fix-table-col-forms">Bank</td>
+      <td>{{form.bank}}</td>
+    </tr>
+      <tr>
+      <td class="allif-fix-table-col-forms">Equity A/C</td>
+      <td>{{form.equity}}</td>
+    </tr>
+      <tr>
+      <td class="allif-fix-table-col-forms">Asset A/C</td>
+      <td>{{form.asset}}</td>
+    </tr>
+     
+  
+    {%endblock%}
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col"> {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Deposits' user_var glblslug %}">Go Back</a></td>
+    </tr>
+  {% endblock %}
+  {% block allif_sensitive_section_col_two %}
+    <tr>
+      <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteDeposit.url }}">Delete {{allifquery}}</a></td>
+    </tr>
+    {% endblock %}
 
 
 
