--- a/allifmaalcommonapp/templates/allifmaalcommonapp/banks/deposits/shareholders/deposits-sh.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/banks/deposits/shareholders/deposits-sh.html
@@ -1,234 +1,46 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
+  {% extends 'allifmaalcommonapp/ui/tables/full/data-list.html'%}
+  {% load humanize %}
+  {% load allif_navigation_tags %}
+  {% block allif-basic-search-action %}
+    {% url 'allifmaalcommonapp:commonDepositSearch' user_var glblslug %}
+  {% endblock %}
+ 
+  {% block advanced-search-action %}
+    {% url 'allifmaalcommonapp:commonDepositAdvanceSearch' user_var glblslug %}
+  {% endblock %}
+   {% block upload-excel-file-action %}
+    {% url 'allifmaalcommonapp:commonUploadExcel' 'CommonCurrenciesModel' user_var glblslug %}
+  {% endblock %}
+  {% block allif-header-links %}
+ {% include 'allifmaalcommonapp/banks/banks-header.html' %}
 {% endblock %}
-{% block style %}
+{% block upload-excel-file %}
 {%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
-<!--start....main headere-->
-<div class="card-header">
+{% block list-table-headers %}
+<td class="allif-fix-table-col"> Name</td>
+<td class="allif-table-header-td"> Bank</td>
+<td class="allif-table-header-td"> Description </td>
+<td class="allif-table-header-td"> Amount</td>
+<td class="allif-table-header-td">Date </td>
+{% endblock %}
 
-  <div class="row mt-12" ><!--start....header row-->
   
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    <div class="dropdown allifmaal-content-dropdown">
-      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Open Filters
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <div class="content-dropdown-menu">
-          <li><a class="dropdown-item">Looking for something?</a></li>
-          
-          <a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonClearShareholderDepositSearch' user_var glblslug %}">Clear Search</a>
-        
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonDepositSearch' user_var glblslug %}">{% csrf_token %}
-        
-          <input type="text" id="allifsearchcommonfield" name="allifsearchcommonfieldname" class="form-control allifsearchcommonfieldclasstwo"
-          placeholder="Type Here ...">
-        
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-          </form>
-        
-         
-      <hr>
-      <li><a class="dropdown-item">Advanced Searching</a></li>
-      <form method='POST' action="{% url 'allifmaalcommonapp:commonDepositAdvanceSearch' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
-        
-        <div>
-          <label>Start Date</label>
-          <input type="date" class="form-control" name="startdate" placeholder="Starting Balance">
-        </div>
-        <div>
-          <label>End Date</label>
-          <input type="date" class="form-control" name="enddate" placeholder="Ending Balance">
-        </div>
-
-        <div>
-          <label>Start Value</label>
-          <input type="text" class="form-control" name="startvalue" placeholder="">
-        </div>
-        <div>
-          <label>End Value</label>
-          <input type="text" class="form-control" name="endvalue" placeholder="">
-        </div>
-        
-        
-        <div>
-          <label >Select Option</label>
-          <select name="requiredformat" class="form-control">
-            {% for item in formats %}
-            <option>{{item.name}}</option>
-            
-         {% endfor %}
-         
-        </select>
-        </div>
-  
-        
-        <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-    
-    </form>
-    <hr>
-      
-      </div>
-      </ul>
-    </div>
-    <a class="amel-table-list-identifier">Bank Deposits:</a>
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    <a href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a>
-    <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddBankShareholderDeposit' user_var glblslug %}">New Deposit</a>
-    <a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a>
-  
-  
-  </div>
-  
-      </div><!--end....header column-->
-    
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-
-<div class="allifmaincontainer"> 
-<div class="row mt-12"> <!--start....table row-->
-  <div class="col-md-12"> <!--start....table column-->
-
-    <div class="allif-scroll-table">
-      <div class="table-responsive allif-full-table">
-      <table class="table table-layout">
-        <thead>
-          <tr class="allif-table-header-row">
-          <td class="allif-fix-table-col">Description</td>
-         
-         
-          <td>Amount</td>
-        <td>Bank Name</td>
-        <td>Account</td>
-        
-        <td>Date</td>
-       
-          <td>Navigate</td>
-          
-          <td> . . . </td>
-          <td></td>
-          </tr>
-          </thead>
-          <tbody class="allif-table-body">
-           
-          
-          {% for item in allifqueryset %} 
-          <tr data-id="{{item.id}}">
-          <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonBankShareholderDepositDetails' item.id user_var glblslug %}">{{item.description}}</a></td>
-           
-          <td>
-            {{item.amount|floatformat:2|intcomma}}
-           </td>
-           <td>
-            {{item.bank}}
-           </td>
-          
-           
-            <td>
-            {{item.bank.account}}
-           </td>
-           <td>
-            {{item.date|date:'d/m/Y'}}
-           </td>
-          
-           <td>
-            <div class="dropdown allifmaal-content-dropdown">
-              <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-              <div class="dropdown-content">
-                <a href="{% url 'allifmaalcommonapp:commonEditBankShareholderDeposit' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-                <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-                 
-              </div>
-            </div>
-            <div class="dropdown allif-confirm-action">
-              
-              <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-              <a href="{% url 'allifmaalcommonapp:commonDeleteBankShareholderDeposit' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-            </div>
-  
-           
-          </td>
-          
-         
-         <td> . . . </td>
-         <td></td>
-        
-    
-      </tr>
-      {% endfor %}
-      {% if searched_data %}
-      {% for item in searched_data %}
-      <tr data-id="{{item.id}}">
-        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonBankShareholderDepositDetails' item.id user_var glblslug %}">{{item.description}}</a></td>
-         
-        <td>
-          {{item.amount|floatformat:2|intcomma}}
-         </td>
-         <td>
-          {{item.bank}}
-         </td>
-        
-         
-          <td>
-          {{item.bank.account}}
-         </td>
-         <td>
-          {{item.date|date:'d/m/Y'}}
-         </td>
-        
-         <td>
-          <div class="dropdown allifmaal-content-dropdown">
-            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-            <div class="dropdown-content">
-              <a href="{% url 'allifmaalcommonapp:commonEditBankShareholderDeposit' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-               
-            </div>
-          </div>
-          <div class="dropdown allif-confirm-action">
-            
-            <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-            <a href="{% url 'allifmaalcommonapp:commonDeleteBankShareholderDeposit' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-          </div>
-
-         
-        </td>
-        
-       
-       <td> . . . </td>
-       <td></td>
+   {% block list-table-content-seciton %}
+        <td class="allif-fix-table-col">{% block list-table-content-seciton-links %}<a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonEditBankShareholderDeposit' item.id user_var glblslug %}"> {{item.name}} </a>{%endblock%}</td>
+        <td class="allif-table-content-td"> {{item.bank}} </td>
+        <td class="allif-table-content-td"> {{item.description}}</td>
+        <td class="allif-table-content-td"> {{item.amount|floatformat:2|intcomma}}</td>
+         <td class="allif-table-content-td"> {{item.date|date:'d/m/Y'}}</td>
       
   
-    </tr>
-      {% endfor %}
-        {% endif %}
-  
-        </tbody>
-      </table>
-      </div>
-     </div>
-
-      
-      </div><!--end....table column-->
-  </div>
-
-</div><!--end....table row-->
-
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-  {% block scripts %}
-  <!--when you put the js code here, it gives a repetitive results....-->
+  {% endblock %}
+  {% block list-table-content-seciton-dropdown-links %}
+  <a href="{% url 'allifmaalcommonapp:commonEditBankShareholderDeposit' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Item Details</a>
   {% endblock %}
   
-   {% endblock %}
-   
+
+
+
+
+
+
