--- a/allifmaalcommonapp/templates/allifmaalcommonapp/includes/headers/header-upper-section.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/includes/headers/header-upper-section.html
@@ -4,5 +4,5 @@
 <div class="row mt-12" ><!--start....header row-->
 <div class="col-md-12"><!--start....header column-->
 <div class="container-fluid amel-content-header">
-  <a class="amel-table-list-identifier">{{title}} {{allifquery}}:</a>
-  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+<a class="amel-table-list-identifier"> {% if allifquery %} {{allifquery}} {%else%} {{title}} {%endif%}:</a>
+<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
